[package]
name = "rsdb"
description = "RSDB is a small library for creating a query-able database that is encoded with json."
license-file = "LICENSE"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/KaceCottam/rsdb"
readme = "README.md"
repository = "https://github.com/KaceCottam/rsdb"
keywords = ["database","json","small"]
categories = ["database-implementations"]

[dependencies]
thiserror = "1.0"
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"

[dev-dependencies]
mutagen = { git = "https://github.com/llogiq/mutagen" }